react: 移除无用代码，调整目录结构